[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/HelperScenes/Powerups/ClusterBomb.gd" type="Script" id=1]
[ext_resource path="res://Scenes/HelperScenes/Powerups/Bomb.tscn" type="PackedScene" id=2]

[node name="ClusterBomb" type="Node2D"]
scale = Vector2( 0.7, 0.7 )
script = ExtResource( 1 )
side_bomb_speed = 50

[node name="Bomb1" parent="." instance=ExtResource( 2 )]
scale = Vector2( 0.4, 0.4 )

[node name="Bomb2" parent="." instance=ExtResource( 2 )]
scale = Vector2( 0.4, 0.4 )

[node name="Bomb3" parent="." instance=ExtResource( 2 )]
scale = Vector2( 0.4, 0.4 )

[node name="Bomb4" parent="." instance=ExtResource( 2 )]
scale = Vector2( 0.4, 0.4 )
